More font/padding/styling tweaks. Methods panel cleanup. Fix Git panel layout issue.  Bug fixes and additions to image column in Request Info panel.

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,6 @@ body.tracyHidden:before {
 
 #tracy-debug a {
     border: none !important;
-    font-weight: normal !important;
 }
 
 #tracy-debug table {
@@ -242,7 +241,7 @@ body.tracyHidden:before {
 #tracy-debug .tracy-panel th {
     font: normal normal 13px/1.3 Arial, sans-serif !important;
     font-weight: normal !important;
-    padding: 4px !important;
+    padding: 2px 4px !important;
     border: 1px solid #C9D4E1 !important;
     line-height: 1.8 !important;
 }
@@ -327,6 +326,7 @@ table.captainHookTable td:nth-child(3), table.captainHookTable th:nth-child(3) {
 
 .tracy-inner p {
     font-size:13px !important;
+    margin: 1em 0 !important;
 }
 
 #tracy-debug td pre, #tracy-debug code {
@@ -436,7 +436,7 @@ ul.pw-info-links {
 
 .pw-info-links li.with-labels {
     display: block !important;
-    padding: 0 0 5px 0 !important;
+    padding: 1px 0 !important;
     line-height: 0.7 !important;
 }
 
